# GameOfLife_CUDA_GL

./: CMakeLists.txt  README.md  cuda_ops.cu  cuda_ops.cuh  main.cpp
